--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -30,6 +30,7 @@ On Error:         #FFFFFF
   --color-on-primary: #000000;
   --color-on-secondary: #000000;
   --color-on-background: #000000;
+  --color-on-background-2: #222222;
   --color-on-surface: #FFFFFF;
   --color-on-surface-2: #A6A6A6;
   --color-on-error: #FFFFFF;
@@ -417,6 +418,10 @@ a:hover circle {
   stroke: var(--color-primary);
 }
 
+a:hover line {
+  stroke: var(--color-primary);
+}
+
 @media (min-width: 576px) {
   .navbar-expand-sm {
     flex-wrap: nowrap;
@@ -529,4 +534,76 @@ a:hover circle {
     padding: 0;
     overflow-y: visible;
   }
+}
+
+.card {
+  background-color: var(--color-on-background-2) !important;
+  /* border-color: var(--color-primary) !important; */
+  padding: 5px !important;
+}
+
+.list-group-item {
+  background-color: var(--color-on-background-2) !important;
+  color: var(--color-on-surface-2) !important;
+}
+
+.card-title {
+  color: var(--color-on-surface) !important;
+  text-align: center !important;
+}
+
+.card-title a {
+  color: var(--color-on-surface) !important;
+  text-decoration: none !important;
+  /* padding-bottom: 2px;
+  background-image: linear-gradient(to right, var(--color-secondary), var(--color-secondary));
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 0% 2px;
+  transition: background-size 0.3s ease-out; */
+}
+
+.card-title a:hover {
+  /* background-size: 100% 2px; */
+  color: var(--color-primary) !important;
+}
+
+.card-body {
+  color: var(--color-on-surface-2) !important;
+  text-align: center !important;
+}
+
+/* .card-img-top {
+  opacity: 0.7 !important;
+}
+
+.card-img-top:hover {
+  opacity: 1.0 !important;
+} */
+
+img {
+  opacity: 0.7 !important;
+}
+
+img:hover {
+  opacity: 1.0 !important;
+}
+
+/* .card-link {
+  display: inline-block !important;
+} */
+
+.work svg {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.project {
+  position: relative;
+  left: calc(20% - 100px);
+  color: var(--color-primary);
+  padding-bottom: 250px;
+  /* padding-top: 250px; */
+  display: flex;
 }
