--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -77,7 +77,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: var(--color-background) !important;
   min-width: 200px;
-  zoom:1.1;
+  zoom:1.07;
 }
 
 /* prevent horizontal scrolling */
@@ -132,6 +132,11 @@ html {
 
 .nav-link:hover {
   color: var(--color-primary) !important;
+}
+
+.nav-key-hover {
+  color: var(--color-primary) !important;
+  transform: scale(1.2);
 }
 
 .navbar-nav {
@@ -623,13 +628,20 @@ img {
 
 img:hover {
   opacity: 1.0 !important;
-  transform: scale(1.05);
+  transform: scale(1.04);
 }
 
 .work svg {
   width: 30px;
   height: 30px;
   display: inline-block;
+}
+
+.nav-key svg {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  padding-right: 10px;
 }
 
 .card-container {
